fix folter gap

--- a/assets/scss/pages/_gallery.scss
+++ b/assets/scss/pages/_gallery.scss
@@ -33,7 +33,6 @@
     }
   }
 
-  .bg-accordion {}
 
 
   .img-wrapper {
@@ -44,8 +43,6 @@
     // max-width: 175px;
     width: 100%;
     aspect-ratio: 1 / 1;
-
-
   }
 
   // .panel1a-header {
@@ -91,14 +88,23 @@
     // padding-right: 3%;
     // margin-bottom: 3%;
     overflow-y: scroll !important;
+
+    &::-webkit-scrollbar-thumb {
+      // background-image: linear-gradient(180deg, #D0368A 0%, #708AD4 99%);
+      background: url('../../img/gallery/scrollbar.svg') no-repeat center center;
+      // box-shadow: inset 2px 2px 5px 0 rgba(#fff, 0.5);
+      border-radius: 0;
+    }
+
+
   }
 
-  ::-webkit-scrollbar-thumb {
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-    background: url('http://cdn.css-tricks.com/wp-content/themes/CSS-Tricks-10/images/header-demos.jpg');
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
-  }
+  // ::-webkit-scrollbar-thumb {
+  //   -webkit-border-radius: 10px;
+  //   border-radius: 10px;
+  //   background: url('../../img/gallery/scrollbar.svg');
+  //   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+  // }
 
 
   .header-content {
@@ -141,7 +147,7 @@
   position: relative;
 
   .frame {
-    width: 100% !important;
+    // width: 100% !important;
     position: relative;
   }
 
